Update Treasure room spawning algorithm